Modifica per bacchetta singola

--- a/input.in
+++ b/input.in
@@ -1,2 +1,7 @@
-15
-8
+12.
+1
+1.
+
+#La prima riga e' l'altezza delle bacchette in centimetri
+#La seconda riga e' il numero di bacchette per lato
+#La terza riga e' l'altezza della sorgente rispetto alla base della bacchetta, per misure di laboratorio
